# interval-gen

./: LICENSE  main.py  pyproject.toml
server/: Cargo.toml  README.md
server/src/: config.rs  intervals.rs  llm.rs  main.rs  models.rs
src/: generator.py  interval.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: CalendarView.tsx  ScheduleList.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  modal.tsx  tabs.tsx
